<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/scheduled_alarms_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/scheduled_alarms_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/scheduled_alarms"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <LinearLayout
        android:id="@+id/scheduled_alarms_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/scheduled_alarms_permission_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/normal_margin"
            android:text="@string/calendar_permission_explanation"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scheduled_alarms_grant_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_calendar_access"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scheduled_alarms_refresh"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_calendar_now" />

        <ProgressBar
            android:id="@+id/scheduled_alarms_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/scheduled_alarms_sync_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/normal_margin"
            android:text="@string/calendar_sync_failed"
            android:visibility="gone" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/scheduled_alarms_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/activity_margin"
            android:text="@string/no_scheduled_alarms"
            android:visibility="gone" />

        <org.fossify.commons.views.MyRecyclerView
            android:id="@+id/scheduled_alarms_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
