<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_margin"
    android:paddingBottom="@dimen/normal_margin">

    <View
        android:id="@+id/calendar_diagnostics_footer_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.14" />

    <LinearLayout
        android:id="@+id/calendar_diagnostics_footer_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/calendar_diagnostics_footer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calendar_diagnostics_about_title"
            android:textStyle="bold" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/calendar_diagnostics_footer_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/calendar_diagnostics_show_details"
            android:textStyle="bold" />

    </LinearLayout>

    <org.fossify.commons.views.MyTextView
        android:id="@+id/calendar_diagnostics_footer_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        android:alpha="0.65"
        android:text="@string/calendar_diagnostics_alarm_manager_note"
        android:visibility="gone"
        tools:text="This list reflects ClockT records." />

</LinearLayout>
